# PSP-Blue-Light-Filter

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  conftest.py  get_all_screenshots.py  test_filter.py
.github/scripts/: build.sh
.github/workflows/: on_push_or_pr.yml
src/: blue_light_filter.c  blue_light_filter.h  bluelightfilter.c  bluelightfilter.h  hook_display.c  hook_display.h  main.c  sctrl.h
tests/: CMakeLists.txt  test_main.c  test_specifics.c
tests/test_prx_files/: CMakeLists.txt
tests/test_prx_files/src/: set_each_word_in_buffer.c  set_each_word_in_buffer.h  test_constants.h  test_fill_buffer_alternating_black_white.c  test_fill_buffer_black.c  test_fill_buffer_blue.c  test_fill_buffer_white.c  test_fill_buffer_yellow.c  test_main.c  test_specifics.c
tests/tests/: conftest.py  file_locations.py  get_all_screenshots.py  test_filter.py
